[gd_scene load_steps=2 format=3 uid="uid://c8bp1lii36kv7"]

[ext_resource type="Script" uid="uid://p4mfgn8k8mtv" path="res://World/InteractibleObjects/pipe_section.gd" id="2_dqvcp"]

[node name="PipeSection" type="Button"]
custom_minimum_size = Vector2(0, 1152)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 504.0
grow_horizontal = 2
size_flags_horizontal = 15
size_flags_vertical = 0
action_mode = 0
expand_icon = true
script = ExtResource("2_dqvcp")

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="resized" from="." to="." method="_on_resized"]
